Randomly choose countries for buttons and correct answer

--- a/index.html
+++ b/index.html
@@ -18,26 +18,19 @@
     <main>
       <h1>Guess the National Anthem</h1>
 
-      <audio
-        controlsList="nodownload"
-        controls
-        src="https://www.navyband.navy.mil/music/anthems/france.mp3"
-      ></audio>
+      <audio controlsList="nodownload" controls></audio>
 
       <div id="button-row">
-        <button><img src="https://flagcdn.com/au.svg" />Australia</button>
+        <!-- <button><img src="https://flagcdn.com/au.svg" />Australia</button>
         <button><img src="https://flagcdn.com/fr.svg" />France</button>
         <button><img src="https://flagcdn.com/gb.svg" />United Kingdom</button>
-        <button><img src="https://flagcdn.com/us.svg" />United States</button>
+        <button><img src="https://flagcdn.com/us.svg" />United States</button> -->
       </div>
 
-      <div id="answer">
-        The correct answer was
-        <img src="https://flagcdn.com/fr.svg" />
-        <b>France - La Marseillaise</b>
-        (The Song of Marseille)
-      </div>
+      <div id="answer"></div>
     </main>
+
+    <script src="anthems.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
