Add attribution and hide answer until selected

--- a/index.html
+++ b/index.html
@@ -20,14 +20,9 @@
 
       <audio controlsList="nodownload" controls></audio>
 
-      <div id="button-row">
-        <!-- <button><img src="https://flagcdn.com/au.svg" />Australia</button>
-        <button><img src="https://flagcdn.com/fr.svg" />France</button>
-        <button><img src="https://flagcdn.com/gb.svg" />United Kingdom</button>
-        <button><img src="https://flagcdn.com/us.svg" />United States</button> -->
-      </div>
+      <div id="button-row"></div>
 
-      <div id="answer"></div>
+      <div id="answer" class="hidden"></div>
     </main>
 
     <script src="anthems.js"></script>
