Small bug fixes and improvements

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <div id="button-row"></div>
 
       <div id="answer" class="hidden"></div>
+
+      <div id="footer">Made in Australia</div>
     </main>
 
     <script src="anthems.js"></script>
