Small footer improvement

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 
       <div id="answer" class="hidden"></div>
 
-      <div id="footer">Made in Australia</div>
+      <div id="footer">
+        <img src="https://flagcdn.com/au.svg" /><span
+          >Made in Australia • Source code available on
+          <a href="https://github.com/shock59/country-guessing-game"
+            >GitHub</a
+          ></span
+        >
+      </div>
     </main>
 
     <script src="anthems.js"></script>
