--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&family=Noto+Sans+Bengali:wght@100..900&family=Noto+Sans+Devanagari:wght@100..900&family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Hebrew:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+KR:wght@100..900&family=Noto+Sans+Lao:wght@100..900&family=Noto+Sans+Marchen&family=Noto+Sans+Myanmar:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+Sinhala:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans+Thaana:wght@100..900&family=Noto+Sans+Thai:wght@100..900&family=Noto+Serif+Tibetan:wght@100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -18,18 +16,24 @@
   </head>
   <body>
     <main>
-      <h1>Guess the National Anthem</h1>
+      <h1>Country Guessing Games</h1>
 
-      <p id="score">Score: 0/0</p>
+      <p>
+        <a href="anthems.html"
+          ><button class="next-button">Guess the National Anthem</button></a
+        >
+      </p>
 
-      <audio controlsList="nodownload" controls></audio>
-
-      <div id="button-row"></div>
-
-      <div id="answer" class="hidden"></div>
+      <p>
+        <a href="flags.html"
+          ><button class="next-button">Guess the Flag</button></a
+        >
+      </p>
 
       <div id="footer">
-        <img src="https://flagcdn.com/au.svg" /><span
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Australia.svg"
+        /><span
           >Made in Australia • Source code available on
           <a href="https://github.com/shock59/country-guessing-game"
             >GitHub</a
@@ -38,7 +42,7 @@
       </div>
     </main>
 
-    <script src="anthems.js"></script>
-    <script src="index.js"></script>
+    <script src="js/countries.js"></script>
+    <script src="js/flags.js"></script>
   </body>
 </html>
