Add "All Anthems" page

--- a/anthems.html
+++ b/anthems.html
@@ -31,6 +31,11 @@
 
       <div id="answer" class="hidden"></div>
 
+      <p>
+        You can view all of the national anthems
+        <a href="allAnthems.html">here</a>!
+      </p>
+
       <div id="footer">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Australia.svg"
