--- a/allAnthems.html
+++ b/allAnthems.html
@@ -19,8 +19,8 @@
     <main>
       <div id="header">
         <span
-          ><a href="anthems.html">Anthems</a> •
-          <a href="flags.html">Flags</a></span
+          ><a href="anthems.html">Anthems</a> • <a href="flags.html">Flags</a> •
+          <a href="mottos.html">Mottos</a></span
         >
       </div>
 
