--- a/flags.html
+++ b/flags.html
@@ -18,7 +18,10 @@
   <body>
     <main>
       <div id="header">
-        <span><a href="anthems.html">Anthems</a> • Flags</span>
+        <span
+          ><a href="anthems.html">Anthems</a> • Flags •
+          <a href="mottos.html">Mottos</a></span
+        >
       </div>
 
       <h1>Guess the Flag</h1>
