--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         >
       </p>
 
+      <p>
+        <a href="mottos.html"
+          ><button class="next-button">Guess the Motto</button></a
+        >
+      </p>
+
       <div id="footer">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Australia.svg"
