--- a/mottos.html
+++ b/mottos.html
@@ -19,25 +19,20 @@
     <main>
       <div id="header">
         <span
-          >Anthems • <a href="flags.html">Flags</a> •
-          <a href="mottos.html">Mottos</a></span
+          ><a href="anthems.html">Anthems</a> • <a href="flags.html">Flags</a> •
+          Mottos</span
         >
       </div>
 
-      <h1>Guess the National Anthem</h1>
+      <h1>Guess the National Motto</h1>
 
       <p id="score">Score: 0/0</p>
 
-      <audio controlsList="nodownload" controls></audio>
+      <div id="motto"></div>
 
       <div id="button-row"></div>
 
       <div id="answer" class="hidden"></div>
-
-      <p>
-        You can view all of the national anthems
-        <a href="allAnthems.html">here</a>!
-      </p>
 
       <div id="footer">
         <img
@@ -51,7 +46,7 @@
       </div>
     </main>
 
-    <script src="js/anthemsData.js"></script>
-    <script src="js/anthemsPage.js"></script>
+    <script src="js/mottosData.js"></script>
+    <script src="js/mottosPage.js"></script>
   </body>
 </html>
