--- a/mottos.html
+++ b/mottos.html
@@ -20,7 +20,9 @@
       <div id="header">
         <span
           ><a href="anthems.html">Anthems</a> • <a href="flags.html">Flags</a> •
-          Mottos</span
+          <a href="flags.html">Mottos</a></span
+        > •
+          <a href="languages.html">Languages</a></span
         >
       </div>
 
