--- a/flags.html
+++ b/flags.html
@@ -19,8 +19,10 @@
     <main>
       <div id="header">
         <span
-          ><a href="anthems.html">Anthems</a> • Flags •
-          <a href="mottos.html">Mottos</a></span
+          ><a href="anthems.html">Anthems</a> • <a href="flags.html">Flags</a> •
+          <a href="flags.html">Mottos</a></span
+        > •
+          <a href="languages.html">Languages</a></span
         >
       </div>
 
