--- a/languages.html
+++ b/languages.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&family=Noto+Sans+Bengali:wght@100..900&family=Noto+Sans+Devanagari:wght@100..900&family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Hebrew:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+KR:wght@100..900&family=Noto+Sans+Lao:wght@100..900&family=Noto+Sans+Marchen&family=Noto+Sans+Myanmar:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+Sinhala:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans+Thaana:wght@100..900&family=Noto+Sans+Thai:wght@100..900&family=Noto+Serif+Tibetan:wght@100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&family=Noto+Sans+Armenian:wght@100..900&family=Noto+Sans+Bengali:wght@100..900&family=Noto+Sans+Devanagari:wght@100..900&family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Hebrew:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+KR:wght@100..900&family=Noto+Sans+Lao:wght@100..900&family=Noto+Sans+Marchen&family=Noto+Sans+Myanmar:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+Sinhala:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans+Thaana:wght@100..900&family=Noto+Sans+Thai:wght@100..900&family=Noto+Serif+Tibetan:wght@100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -26,20 +26,15 @@
         >
       </div>
 
-      <h1>Guess the National Anthem</h1>
+      <h1>Guess the Country Name in its Language</h1>
 
       <p id="score">Score: 0/0</p>
 
-      <audio controlsList="nodownload" controls></audio>
+      <div id="motto"></div>
 
       <div id="button-row"></div>
 
       <div id="answer" class="hidden"></div>
-
-      <p>
-        You can view all of the national anthems
-        <a href="allAnthems.html">here</a>!
-      </p>
 
       <div id="footer">
         <img
@@ -53,7 +48,7 @@
       </div>
     </main>
 
-    <script src="js/anthemsData.js"></script>
-    <script src="js/anthemsPage.js"></script>
+    <script src="js/languagesData.js"></script>
+    <script src="js/languagesPage.js"></script>
   </body>
 </html>
