--- a/allAnthems.html
+++ b/allAnthems.html
@@ -20,8 +20,7 @@
       <div id="header">
         <span
           ><a href="anthems.html">Anthems</a> • <a href="flags.html">Flags</a> •
-          <a href="flags.html">Mottos</a></span
-        > •
+          <a href="mottos.html">Mottos</a> •
           <a href="languages.html">Languages</a></span
         >
       </div>
