--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         >
       </p>
 
+      <p>
+        <a href="languages.html"
+          ><button class="next-button">Guess the Language</button></a
+        >
+      </p>
+
       <div id="footer">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Australia.svg"
