--- a/mottos.html
+++ b/mottos.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100..900&family=Noto+Sans+Bengali:wght@100..900&family=Noto+Sans+Devanagari:wght@100..900&family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Hebrew:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+KR:wght@100..900&family=Noto+Sans+Lao:wght@100..900&family=Noto+Sans+Marchen&family=Noto+Sans+Myanmar:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+Sinhala:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans+Thaana:wght@100..900&family=Noto+Sans+Thai:wght@100..900&family=Noto+Serif+Tibetan:wght@100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -20,8 +20,7 @@
       <div id="header">
         <span
           ><a href="anthems.html">Anthems</a> • <a href="flags.html">Flags</a> •
-          <a href="flags.html">Mottos</a></span
-        > •
+          <a href="mottos.html">Mottos</a> •
           <a href="languages.html">Languages</a></span
         >
       </div>
@@ -29,6 +28,8 @@
       <h1>Guess the National Motto</h1>
 
       <p id="score">Score: 0/0</p>
+
+      <p>All mottos have been translated to English</p>
 
       <div id="motto"></div>
 
